@@ -101,7 +101,7 @@ class GalleryTab(ButtonTab):
     def right_click(self, obj, event):
         itemlist = [
             (True, True, gtk.STOCK_ADD, self.add_button_clicked), 
-            (True, False, _('Share'), self.edit_button_clicked), 
+            (True, False, _('Share'), self.share_button_clicked), 
             (False,True, gtk.STOCK_EDIT, self.edit_button_clicked), 
             (True, True, gtk.STOCK_REMOVE, self.del_button_clicked), 
             ]
